# LearnOpenGLDemo

./: CMakeLists.txt  LICENSE  readme.md  vcpkg.json
cmake/: config.cmake  std_image_download.cmake  vcpkg_download.cmake
cmake/download/: std_image_download.cmake  vcpkg_download.cmake
include/: camera.h  shader.h
shader/: fragmentSource.frag  vertexSource.txt  vertexSource.vert
src/: camera.cpp  main.cpp  shader.cpp
